--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.2.0",
     "@angular/material": "^13.2.6",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "firebase": "^9.6.11",
     "ngx-color-picker": "^12.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
