--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "cypress": "^9.6.1",
     "firebase": "^9.6.11",
     "ngx-color-picker": "^12.0.1",
     "rxjs": "~7.5.0",
