--- a/angular.json
+++ b/angular.json
@@ -113,6 +113,37 @@
             "firebaseProject": "tienda-online-mercadona",
             "firebaseHostingSite": "tienda-online-mercadona"
           }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "tienda-online-bo-angular-alumnos:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "tienda-online-bo-angular-alumnos:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "tienda-online-bo-angular-alumnos:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "tienda-online-bo-angular-alumnos:serve:production"
+            }
+          }
         }
       }
     }
