Github Action with Cypress config and secrets

--- a/.github/workflows/github-actions-init.yml
+++ b/.github/workflows/github-actions-init.yml
@@ -1,24 +1,25 @@
 name: End-to-end tests
-on:
-  push:
-    branches:
-      - "develop"
-      - "master"
-  pull_request:
+on: [push]
+  branches:
+    - "develop"
+    - "master"
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Install node
         uses: actions/setup-node@v2
         with:
           node:version: "14"
+
       - name: Install dependencies
         run: npm install
+
       - name: Cypress run
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v2.9.7
         with:
           browser: chrome
           record: true
@@ -30,5 +31,12 @@ jobs:
           # wait for 6 minutes for the server to respond
           wait-on-timeout: 360
         env:
+          # pass the Dashboard record key as an environment variable
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # pass the project ID from the secrets through environment variable
+          CYPRESS_PROJECT_ID: ${{ secrets.CY_PROJECT_ID }}
+          # pass GitHub token to allow accurately detecting a build vs a re-run build
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Cypress variables
           CYPRESS_regular_user_username: ${{ secrets.CYPRESS_regular_user_username }}
-          CYPRESS_regular_user_password: ${{ secrets.CYPRESS_regular_user_password }} 
+          CYPRESS_regular_user_password: ${{ secrets.CYPRESS_regular_user_password }}
