Update github actions configuration

--- a/.github/workflows/github-actions-init.yml
+++ b/.github/workflows/github-actions-init.yml
@@ -1,8 +1,10 @@
 name: End-to-end tests
-on: [push]
-  branches:
-    - "develop"
-    - "master"
+on:
+  push:
+    branches:
+      - "develop"
+      - "master"
+  pull_request:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
