Remove warning and update tests folder

--- a/.github/workflows/github-actions-init.yml
+++ b/.github/workflows/github-actions-init.yml
@@ -26,12 +26,13 @@ jobs:
           browser: chrome
           record: true
           parallel: true
-          group: 'Actions example'
           start: npm run start
           # quote the url to be safe against YML parsing surprises
           wait-on: 'http://localhost:4200'
           # wait for 6 minutes for the server to respond
           wait-on-timeout: 360
+          group: 'UI - Chrome'
+          spec: cypress/integration/*
         env:
           # pass the Dashboard record key as an environment variable
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
